feat: add all PIL supported extension, minor refactoring

--- a/CNN_creation_and_training.ipynb
+++ b/CNN_creation_and_training.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2104850a-107e-4bcc-94ac-ca09dbca153b",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import pandas as pd\n",
+    "from PIL import Image\n",
     "\n",
     "folder_path = \"./archive/\""
    ]
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "84d5c77a-d176-46be-b512-375f3d301f8d",
    "metadata": {},
    "outputs": [
@@ -1093,21 +1094,23 @@
     "dataset = []\n",
     "target_size = (224, 224)\n",
     "\n",
+    "# I can check all extension supported from PIL \n",
+    "supported_exts = tuple(ext.lower() for ext in Image.registered_extensions().keys())\n",
+    "\n",
     "for filename in df['filename']:\n",
     "    file_path = os.path.join(images_folder_path, filename)\n",
     "    print(filename)\n",
     "    if os.path.isfile(file_path):\n",
     "        \n",
     "        # Check if the file extension is a supported image format\n",
-    "        if not filename.lower().endswith(('.png', '.jpg', '.jpeg', '.bmp', '.tiff')):\n",
+    "        if not filename.lower().endswith(supported_exts):\n",
     "            print(f\"Invalid Extension for {filename}.\")\n",
     "            invalid_images.append(filename)\n",
     "            continue\n",
     "\n",
     "        # Try loading and preprocessing the image\n",
     "        try:\n",
-    "            img = tf.keras.preprocessing.image.load_img(file_path)  # Load the image\n",
-    "            img = img.resize(target_size)  # Resize to the target dimensions\n",
+    "            img = tf.keras.preprocessing.image.load_img(file_path, target_size=target_size)  # Load the image and resize to the target dimensions\n",
     "            numeric_img = tf.keras.preprocessing.image.img_to_array(img)  # Convert image to a numeric array\n",
     "            numeric_img = numeric_img / 255.  # Normalize pixel values to range [0, 1]\n",
     "            dataset.append(numeric_img)  # Add the preprocessed image to the dataset\n",
@@ -1610,14 +1613,6 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3463e4b4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
